--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -4967,6 +4967,10 @@ $min2ColWidth: 400px;
   display: none;
   top: 0;
 
+  &.tooltip-hud {
+    display: block;
+  }
+
   &.has-footer .tip-bottom {
     background-image: url(../images/hudtip_bottom_gray.png);
   }
