--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -5311,27 +5311,28 @@ $min2ColWidth: 400px;
     gap: var(--xs);
 
     li {
-      .activity-container__trigger {
+      .activity-btn {
         width: 30px;
         height: 30px;
         border-radius: 50%;
-      }
+        display: block;
 
-      .elementthumb {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        border-radius: 50px;
-        background: var(--gray-050);
-        overflow: hidden;
-        border: 2px solid var(--white);
-        box-shadow: 0 1px 2px 1px transparentize($grey900, 0.9);
-
-        img,
-        svg {
-          display: block;
+        .elementthumb {
+          position: relative;
           width: 100%;
           height: 100%;
+          border-radius: 50px;
+          background: var(--gray-050);
+          overflow: hidden;
+          border: 2px solid var(--white);
+          box-shadow: 0 1px 2px 1px transparentize($grey900, 0.9);
+
+          img,
+          svg {
+            display: block;
+            width: 100%;
+            height: 100%;
+          }
         }
       }
 
