--- a/src/templates/users/_photo.twig
+++ b/src/templates/users/_photo.twig
@@ -7,7 +7,7 @@
                 <img sizes="100px" srcset="{{ photoUrl }} 100w, {{ user.getThumbUrl(200) }} 200w" alt="{{ user.getThumbAlt() }}">
             {% else %}
                 {{ svg('@appicons/user.svg')|prepend(tag('title', {
-                    text: currentUser.getThumbAlt(),
+                    text: user.getName(),
                 })) }}
             {% endif %}
         </div>
