--- a/src/templates/settings/sections/_entrytypes/edit.twig
+++ b/src/templates/settings/sections/_entrytypes/edit.twig
@@ -53,13 +53,13 @@
 
     {% endif %}
 
-    {{ forms.checkboxField({
+    {{ forms.lightswitchField({
         first: (section.type == 'single'),
         label: "Show the Title field"|t('app'),
         name: 'hasTitleField',
         toggle: 'title-container',
         reverseToggle: '#titleFormat-container, .fld-title-field-icon',
-        checked: entryType.hasTitleField
+        on: entryType.hasTitleField,
     }) }}
 
     {% if craft.app.getIsMultiSite() %}
@@ -145,18 +145,13 @@
         </div>
     {% endif %}
 
-    <hr>
-
-    <div id="showStatusField-container">
-        {{ forms.lightswitchField({
-            label: "Show the Status field"|t('app'),
-            instructions: "By default, entries show their status field and give you the ability to change it. You can turn it off for this entry type."|t('app'),
-            id: 'showStatusField',
-            name: 'showStatusField',
-            on: entryType.showStatusField,
-            errors: entryType.getErrors('showStatusField')
-        }) }}
-    </div>
+    {{ forms.lightswitchField({
+        label: "Show the Status field"|t('app'),
+        id: 'showStatusField',
+        name: 'showStatusField',
+        on: entryType.showStatusField,
+        errors: entryType.getErrors('showStatusField')
+    }) }}
 
     <hr>
 
