--- a/src/templates/_layouts/cp.twig
+++ b/src/templates/_layouts/cp.twig
@@ -75,7 +75,7 @@
 {% set footer = (footer ?? block('footer') ?? '')|trim %}
 {% set crumbs = crumbs ?? null %}
 {% set tabs = (tabs ?? [])|length > 1 ? tabs : null %}
-{% set errorsSummary = errorsSummary ?? null %}
+{% set errorSummary = errorSummary ?? null %}
 
 {% set mainContentClasses = [
     sidebar ? 'has-sidebar',
@@ -244,8 +244,8 @@
                                 <h2 id="content-heading"></h2>
                             {% endif %}
                             {% block main %}
-                                {% if errorsSummary is not empty %}
-                                    {{ errorsSummary is defined ? errorsSummary|raw }}
+                                {% if errorSummary is not empty %}
+                                    {{ errorSummary is defined ? errorSummary|raw }}
                                 {% endif %}
                                 <div id="content" class="content-pane">
                                     {% if contentNotice or tabs %}
