Fixed secondary button icon color
[ci skip]

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -1867,6 +1867,7 @@ ul.icons {
   &.submit,
   &.secondary {
     color: var(--white) !important;
+    --ui-control-active-color: var(--white);
     @include light-on-dark-text;
   }
 
