--- a/src/templates/_includes/forms.twig
+++ b/src/templates/_includes/forms.twig
@@ -336,6 +336,8 @@
         {% endif %}
     {% endif %}
 
+    {% set config = config|merge({includeTabindex: false}) %}
+
     {{ _self.field(config, 'template:_includes/forms/autosuggest') }}
 {% endmacro %}
 
