asset additional components + cleanup

--- a/src/templates/_layouts/cp.twig
+++ b/src/templates/_layouts/cp.twig
@@ -222,7 +222,7 @@
                                         <div id="action-buttons" class="flex">
                                             {{ additionalButtons|raw }}
                                             {{ actionButton|raw }}
-                                            {% include '_layouts/components/additional-menu' with additionalMenuComponents %}
+                                            {% include '_layouts/components/additional-menu.twig' with additionalMenuComponents %}
                                         </div>
                                     {% endif %}
                                 {% endblock %}
