ensure formsubmit class only for action component

--- a/src/templates/_layouts/components/additional-menu.twig
+++ b/src/templates/_layouts/components/additional-menu.twig
@@ -69,8 +69,8 @@
 
     {% set componentAttributes = {
         class: [
-            'formsubmit',
-            (destructive ?? false) ? 'error'
+            (destructive ?? false) ? 'error',
+            (dataAttrs.action ?? false) ? 'formsubmit'
         ]|merge(additionalClasses),
         data: dataAttrs,
         aria: ariaAttrs,
