--- a/src/templates/_includes/forms/autosuggest.twig
+++ b/src/templates/_includes/forms/autosuggest.twig
@@ -84,7 +84,11 @@ new Vue({
         onOpened() {
             let $element = $(this.$el);
 
-            // hacky but works
+            // clicking on autosuggestion value won't work if the element's parent has any sort of tabindex set
+            // (it's not vue-autosuggest issue as on its own it works fine with tabindex)
+            // so we have to temporary remove that tabindex when opening the suggestions list
+            // and then add it back in when closing the list
+            // see https://github.com/craftcms/cms/issues/13553 for more details
             let $tabindexParent = $element.parents('[tabindex="-1"]');
             if ($tabindexParent.length > 0) {
                 this.$refs.tabindexParent = $tabindexParent;
