--- a/src/templates/_components/fieldtypes/Matrix/settings.twig
+++ b/src/templates/_components/fieldtypes/Matrix/settings.twig
@@ -24,14 +24,14 @@
             { value: 'all', label: 'Save entries to all sites the owner element is saved in'|t('app') },
             { value: 'custom', label: 'Custom…'|t('app') },
         ],
-        value: field.propagationMethod,
+        value: field.propagationMethod.value,
         toggle: true,
         targetPrefix: 'propagation-method-',
     }) }}
 
     {% tag 'div' with {
         id: 'propagation-method-custom',
-        class: field.propagationMethod != 'custom' ? 'hidden' : null,
+        class: field.propagationMethod.value != 'custom' ? 'hidden' : null,
     } %}
         {{ forms.textField({
             label: 'Propagation Key Format'|t('app'),
@@ -44,12 +44,12 @@
         }) }}
     {% endtag %}
 
-    {% if field.id and field.propagationMethod != 'none' %}
+    {% if field.id and field.propagationMethod.value != 'none' %}
         {% js %}
             (function() {
                 var showingWarning = false;
                 $("#{{ 'propagationMethod'|namespaceInputId }}").on('change', function() {
-                    if ($(this).val() !== '{{ field.propagationMethod }}') {
+                    if ($(this).val() !== '{{ field.propagationMethod.value }}') {
                         if (!showingWarning) {
                             $('<p/>', {'class': 'warning', text: "{{ 'Applying this change to existing entries can take some time.'|t('app')|e('js') }}"})
                                 .appendTo($("#{{ 'propagationMethod-field'|namespaceInputId }}"));
