Add missing `type="button"`
[ci skip]

--- a/src/templates/_elements/toolbar.twig
+++ b/src/templates/_elements/toolbar.twig
@@ -68,5 +68,5 @@
             label: 'Clear search'|t('app'),
         },
     }) }}
-    <button class="filter-btn" title="{{ 'Filter results'|t('app') }}" aria-label="{{ 'Filter results'|t('app') }}" aria-expanded="false"></button>
+    <button type="button" class="filter-btn" title="{{ 'Filter results'|t('app') }}" aria-label="{{ 'Filter results'|t('app') }}" aria-expanded="false"></button>
 </div>
