--- a/src/templates/_layouts/elementindex.twig
+++ b/src/templates/_layouts/elementindex.twig
@@ -15,6 +15,8 @@
     {% set showSiteMenu = elementInstance.isLocalized() %}
 {% endif %}
 
+{% set canHaveDrafts = canHaveDrafts ?? elementInstance.hasDrafts() %}
+
 
 {% block contextMenu %}
     {% if showSiteMenu %}
@@ -78,7 +80,7 @@
         toolbarSelector: '#toolbar',
         defaultSource: {{ (defaultSource ?? null)|json_encode|raw }},
         defaultSourcePath: {{ (defaultSourcePath ?? null)|json_encode|raw }},
-        canHaveDrafts: {{ (canHaveDrafts ?? false) ? 'true' : 'false' }},
+        canHaveDrafts: {{ canHaveDrafts ? 'true' : 'false' }},
     });
 {% endblock %}
 
