--- a/src/templates/settings/users/address-fields.twig
+++ b/src/templates/settings/users/address-fields.twig
@@ -12,7 +12,7 @@
 
         {{ forms.fieldLayoutDesignerField({
             first: true,
-            fieldLayout: fieldLayout ?? craft.app.addresses.getLayout(),
+            fieldLayout: fieldLayout ?? craft.app.addresses.getFieldLayout(),
         }) }}
 
         <div class="buttons">
