--- a/src/templates/_elements/cards.twig
+++ b/src/templates/_elements/cards.twig
@@ -8,7 +8,8 @@
       {% set html = elementCard(element, {
         context: context ?? 'index',
         inputName: inputName ?? ((name ?? false) ? "#{name}[]" : null),
-        checkbox: showCheckboxes ?? false,
+        selectable: selectable ?? false,
+        sortable: sortable ?? false,
       }) %}
       {% if disabled %}
         {% set html = html|removeClass('removable') %}
