--- a/src/templates/_elements/cardsview/elements.twig
+++ b/src/templates/_elements/cardsview/elements.twig
@@ -8,7 +8,8 @@
     } %}
       {{ elementCard(element, {
         context: context ?? 'index',
-        checkbox: showCheckboxes,
+        selectable: selectable,
+        sortable: sortable,
       }) }}
     {% endtag %}
   {% endfor %}
