--- a/src/templates/_elements/list.twig
+++ b/src/templates/_elements/list.twig
@@ -9,7 +9,7 @@
         context: context ?? 'index',
         size: size ?? (viewMode == 'large' ? 'large' : 'small'),
         inputName: inputName ?? ((name ?? false) ? "#{name}[]" : null),
-        checkbox: showCheckboxes ?? false,
+        checkbox: selectable ?? false,
       }) %}
       {% if disabled %}
         {% set element = element|removeClass('removable') %}
