--- a/src/templates/_elements/tableview/elements.twig
+++ b/src/templates/_elements/tableview/elements.twig
@@ -2,11 +2,8 @@
 
 {% set structure = structure is defined ? structure : null -%}
 {% set structureEditable = structureEditable is defined ? structureEditable : false -%}
+{% set padding = craft.app.locale.getOrientation() == 'ltr' ? 'left' : 'right' -%}
 
-{% if structure -%}
-    {% set basePadding = (showCheckboxes ? 14 : 24) + (structureEditable ? 34 : 0) %}
-    {% set padding = craft.app.locale.getOrientation() == 'ltr' ? 'left' : 'right' -%}
-{% endif -%}
 {% for element in elements %}
     {% set totalDescendants = structure
         ? element.getDescendants()
@@ -18,7 +15,7 @@
         : 0 %}
     {% set elementTitle = element.title ?: element.id %}
     <tr data-id="{{ element.id }}"{% if structure %} data-title="{{ elementTitle }}" data-level="{{ element.level }}" data-descendants="{{ totalDescendants ?? 0 }}"{% endif %}{% if element.id in disabledElementIds %} class="disabled"{% endif %}>
-        {% if showCheckboxes %}
+        {% if selectable %}
             <td class="checkbox-cell">
                 {{ tag('div', {
                     class: 'checkbox',
@@ -33,31 +30,39 @@
         {% endif %}
         {% for attribute in attributes %}
             {% if loop.first %}
-                <th data-title="{{ attribute[1].label }}"{% if structure %} style="padding-{{ padding }}: {{ basePadding * element.level }}px;"{% endif %} data-titlecell="" scope="row">
-                    {%- if structureEditable %}<a class="move icon" title="{{ 'Reorder'|t('app') }}" aria-label="{{ 'Reorder'|t('app') }}" role="button">&nbsp;</a>{% endif %}
-                    {%- if structure and totalDescendants %}
-                        {% set toggleLabel = 'Show {title} children'|t('app', {title: elementTitle}) %}
-                        <button type="button" class="toggle{% if element.id not in collapsedElementIds %} expanded{% endif
-                        %}" title="{{ 'Show/hide children'|t('app') }}" aria-label="{{ toggleLabel }}"
-                        aria-expanded="{{  element.id not in collapsedElementIds ? 'true' : 'false' }}"></button>
-                    {% endif %}
-                    {{ elementChip(element, {
-                        context: context ?? 'index',
-                        autoReload: false,
-                    }) }}
-
-                    {%- if structure %}
-                        {% set textAlternative = 'Level {num}'|t('app', {
-                            num: element.level,
-                        }) %}
-                        {{ tag('span', {
-                            class: 'visually-hidden',
-                            data: {
-                                'text-alternative': true,
-                            },
-                            text: textAlternative,
+                <th data-title="{{ attribute[1].label }}" data-titlecell="" scope="row">
+                    {% tag 'div' with {
+                        style: {
+                            ("padding-#{padding}"): structure or sortable ? "#{24 + 44 * ((element.level ?: 1) - 1)}px" : null,
+                        }|filter,
+                    } %}
+                        {%- if sortable or structureEditable %}
+                            <a class="move icon" title="{{ 'Reorder'|t('app') }}" aria-label="{{ 'Reorder'|t('app') }}" role="button">&nbsp;</a>
+                        {% endif %}
+                        {%- if structure and totalDescendants %}
+                            {% set toggleLabel = 'Show {title} children'|t('app', {title: elementTitle}) %}
+                            <button type="button" class="toggle{% if element.id not in collapsedElementIds %} expanded{% endif
+                            %}" title="{{ 'Show/hide children'|t('app') }}" aria-label="{{ toggleLabel }}"
+                            aria-expanded="{{  element.id not in collapsedElementIds ? 'true' : 'false' }}"></button>
+                        {% endif %}
+                        {{ elementChip(element, {
+                            context: context ?? 'index',
+                            autoReload: false,
                         }) }}
-                    {% endif  %}
+
+                        {%- if structure %}
+                            {% set textAlternative = 'Level {num}'|t('app', {
+                                num: element.level,
+                            }) %}
+                            {{ tag('span', {
+                                class: 'visually-hidden',
+                                data: {
+                                    'text-alternative': true,
+                                },
+                                text: textAlternative,
+                            }) }}
+                        {% endif  %}
+                    {% endtag %}
                 </th>
             {% else %}
                 <td data-title="{{ attribute[1].label }}" data-attr="{{ attribute[0] }}">
