--- a/src/templates/_elements/thumbsview/elements.twig
+++ b/src/templates/_elements/thumbsview/elements.twig
@@ -10,7 +10,8 @@
       {{ elementChip(element, {
         context: context ?? 'index',
         size: 'large',
-        checkbox: showCheckboxes,
+        selectable: selectable,
+        sortable: sortable,
       }) }}
     {% endtag %}
   {% endfor %}
