--- a/src/templates/_layouts/elementindex.twig
+++ b/src/templates/_layouts/elementindex.twig
@@ -61,12 +61,7 @@
 
 
 {% block footer %}
-    <div id="count-spinner" class="spinner small hidden"></div>
-    <div id="count-container" class="light">&nbsp;</div>
-    <div id="actions-container" class="flex"></div>
-    <div id="export-container">
-        <button type="button" id="export-btn" class="btn hidden" aria-expanded="false">{{ 'Export…'|t('app') }}</button>
-    </div>
+    {% include '_elements/footer' %}
 {% endblock %}
 
 
