Translate "Entry Types"
[ci skip]

--- a/src/templates/_components/fieldtypes/Matrix/settings.twig
+++ b/src/templates/_components/fieldtypes/Matrix/settings.twig
@@ -1,7 +1,7 @@
 {% import "_includes/forms" as forms %}
 
 {{ forms.entryTypeField({
-    label: 'Entry Types',
+    label: 'Entry Types'|t('app'),
     instructions: 'Choose the types of entries that can be created in this field.'|t('app'),
     id: 'entry-types',
     name: 'entryTypes',
