--- a/src/templates/settings/sections/_edit.twig
+++ b/src/templates/settings/sections/_edit.twig
@@ -114,7 +114,7 @@
         ]|filter,
     } %}
         {{ forms.entryTypeField({
-            label: 'Entry Types',
+            label: 'Entry Types'|t('app'),
             instructions: 'Choose the types of entries that can be included in this section.'|t('app'),
             id: 'entry-types',
             name: 'entryTypes',
