Lighten the body text

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -2866,6 +2866,7 @@ table {
   background-color: var(--gray-050);
   cursor: default;
   user-select: none;
+  color: var(--medium-text-color);
 
   &:after {
     border-radius: var(--large-border-radius);
